--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: php
 env:
   - GITHUB_TOKEN=fbc9f8b635109c0c7ad64013ff8346908389f5f9
 
+dist: trusty
+
 matrix:
   include:
     - php: 5.4
