--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "phpunit/phpunit": "^9.5",
         "symfony/yaml": "2.1.* || 3.4.* || 5.4.*",
         "squizlabs/php_codesniffer": "^2.6.0 || ^3.0.0",
-        "phpdocumentor/reflection-docblock": "^5.3"
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "nickdnk/graph-sdk": "^6.0"
     },
     "autoload": {
         "psr-4": {
