--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
         "php": "^5.4 || ^5.6 || ^7 || ^8",
         "symfony/css-selector": "^2.8 || ^3.1 || ^4.1 || ^5.3",
         "facebook/graph-sdk": "^5.0",
-        "fakerphp/faker": "^1.20",
-        "phpcompatibility/php-compatibility": "^9.3"
+        "fakerphp/faker": "^1.20"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "symfony/yaml": "2.1.* || 3.4.* || 5.4.*",
         "squizlabs/php_codesniffer": "^2.6.0 || ^3.0.0",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "nickdnk/graph-sdk": "^6.0"
+        "nickdnk/graph-sdk": "^6.0",
+        "phpcompatibility/php-compatibility": "^9.3"
     },
     "autoload": {
         "psr-4": {
